# RAG---using-local-setup-with-ollama

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_app.bat
app/: main.py
app/api/: chat.py  ingest.py  session.py
app/core/: config.py  logging.py
app/db/: session_store.py
app/rag/: llm.py  loader.py  pipeline.py  prompt.py  retriever.py
app/vectorstore/: chroma.py
data/text_files/: machine_learning.txt  python_intro.txt
notebook/: document.ipynb
ui/: app.py
